// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for gainsight-px-cloud-action destination: groupIdentify action - all fields 1`] = `
Object {
  "testType": "0Y5fdRfbP(ju)&u9&n&l",
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: groupIdentify action - required fields 1`] = `""`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: groupIdentify action - required fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Basic MFk1ZmRSZmJQKGp1KSZ1OSZuJmw6",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: identifyUser action - all fields 1`] = `
Object {
  "testType": "#(PG2cZ2",
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: identifyUser action - required fields 1`] = `""`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: identifyUser action - required fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Basic IyhQRzJjWjI6",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: trackEvent action - all fields 1`] = `
Object {
  "testType": "1@PnHg#3fPPGqa8#",
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: trackEvent action - required fields 1`] = `""`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: trackEvent action - required fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Basic MUBQbkhnIzNmUFBHcWE4Izo=",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: trackPageView action - all fields 1`] = `
Object {
  "testType": "RTVb9BnJYZ3IX[",
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: trackPageView action - required fields 1`] = `""`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: trackPageView action - required fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Basic UlRWYjlCbkpZWjNJWFs6",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;
